Inclusión de sub-menús al menú de navegación

--- a/index.html
+++ b/index.html
@@ -25,12 +25,42 @@
         <div class="menu-btn">
           <div class="menu-btn__burger"></div>
         </div>
-        <ul class="menu__items">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#productos">Productos</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#contacto">Contáctanos</a></li>
+        <ul class="menu__ul">
+          <li class="menu__li"><a class="menu__link" href="#">Inicio</a></li>
+          <li class="menu__li">
+            <a class="menu__link" href="#productos">Productos</a>
+
+            <ul class="menu__ul2">
+              <li class="menu__li2">
+                <a class="menu__link" href="#productos">Descripción</a>
+              </li>
+              <li class="menu__li2">
+                <a class="menu__link" href="#detalles">Detalles</a>
+              </li>
+              <li class="menu__li2">
+                <a class="menu__link" href="#galeria">Galería</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu__li">
+            <a class="menu__link" href="#servicios">Servicios</a>
+          </li>
+          <li class="menu__li">
+            <a class="menu__link" href="#nosotros">Acerca de</a>
+
+            <ul class="menu__ul2">
+              <li class="menu__li2">
+                <a class="menu__link" href="#nosotros">Nosotros</a>
+              </li>
+              <li class="menu__li2">
+                <a class="menu__link" href="#mision">Misión y Visión</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="menu__li">
+            <a class="menu__link" href="#contacto">Contáctanos</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -54,7 +84,7 @@
     <main>
       <section id="productos" class="secproduct">
         <div class="container">
-          <h3 class="secproduct__h3">Productos</h3>
+          <h2 class="secproduct__h3">Descripción</h2>
           <p class="secproduct__parrafo">
             Mangas pasteleras de lona antiadherente, nylon impermeable y
             plástico reusable. Resistentes y de fácil limpieza, todas
@@ -65,22 +95,22 @@
         </div>
       </section>
       <section id="detalles">
-        <h3>Detalles</h3>
+        <h2>Detalles</h2>
       </section>
       <section id="galeria">
-        <h3>Galería</h3>
+        <h2>Galería</h2>
       </section>
       <section id="servicios">
-        <h3>Servicios</h3>
+        <h2>Servicios</h2>
       </section>
       <section id="nosotros">
-        <h3>Nosotros</h3>
+        <h2>Nosotros</h2>
       </section>
       <section id="mision">
-        <h3>Misión y Visión</h3>
+        <h2>Misión y Visión</h2>
       </section>
       <section id="contacto">
-        <h3>Contáctanos</h3>
+        <h2>Contáctanos</h2>
       </section>
     </main>
 
