--- a/index.html
+++ b/index.html
@@ -149,5 +149,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
