Agregada sombra al menú de navegación

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Mangas2m</title>
   </head>
   <body>
+    <!-- MENÚ DE NAVEGACIÓN  ******************************************************** -->
     <nav class="menu">
       <div class="container">
         <div class="menu__marca">Creación Mildre 73</div>
@@ -64,7 +65,7 @@
         </ul>
       </div>
     </nav>
-
+    <!-- ENCABEZADO / HERO  ******************************************************** -->
     <header class="hero">
       <div class="hero__img">
         <div class="container">
@@ -82,6 +83,7 @@
     </header>
 
     <main>
+      <!-- SECCIÓN PRODUCTOS  ******************************************************** -->
       <section id="productos" class="secproduct">
         <div class="container">
           <h2 class="secproduct__h3">Descripción</h2>
@@ -113,7 +115,7 @@
         <h2>Contáctanos</h2>
       </section>
     </main>
-
+    <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
     <footer class="pie">
       <h2>Creación Mildre 73</h2>
       <p>
