Agregado el selector de activo en el menú de navegación

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     <!-- MENÚ DE NAVEGACIÓN  ******************************************************** -->
     <nav class="menu">
       <div class="container">
-        <div class="menu__marca">Creación Mildre 73</div>
+        <div class="menu__logo">Creación Mildre 73</div>
         <div class="menu-btn">
           <div class="menu-btn__burger"></div>
         </div>
         <ul class="menu__ul">
-          <li class="menu__li"><a class="menu__link" href="#">Inicio</a></li>
+          <li class="menu__li">
+            <a class="menu__link active" href="#">Inicio</a>
+          </li>
           <li class="menu__li">
             <a class="menu__link" href="#productos">Productos</a>
 
@@ -69,9 +71,10 @@
     <header class="hero">
       <div class="hero__img">
         <div class="container">
-          <h1>Mangas Pasteleras</h1>
-          <h3 class="hero__h4">Con el mejor diseño y durabilidad</h3>
-          <p class="hero__parrafo">
+          <h1 class="hero__h1">Mangas</h1>
+          <h1 class="hero__h1">Pasteleras</h1>
+          <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
+          <p class="hero__p">
             Somos fabricantes, distribuidores y comercializadores de mangas para
             repostería.
           </p>
