Modificaciones varias al menú de navegación modo PC y Tablet

--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
     <title>Mangas2m</title>
   </head>
   <body>
-    <!-- MENÚ DE NAVEGACIÓN  ******************************************************** -->
-    <nav class="menu">
+    <!-- ENCABEZADO DE MENÚ  ******************************************************** -->
+    <div class="header">
       <div class="container">
-        <div class="menu__logo">Creación Mildre 73</div>
+        <div class="header__logo">Creación Mildre 73</div>
         <div class="menu-btn">
           <div class="menu-btn__burger"></div>
         </div>
+      </div>
+    </div>
+    <!-- MENÚ DE NAVEGACIÓN  ******************************************************** -->
+    <nav class="menu">
+      <div class="container">
         <ul class="menu__ul">
           <li class="menu__li">
             <a class="menu__link active" data-url="inicio" href="#inicio"
@@ -71,24 +76,7 @@
         </ul>
       </div>
     </nav>
-    <!-- ENCABEZADO / HERO  ******************************************************** -->
-    <!-- <header class="hero">
-      <div class="hero__img">
-        <div class="container">
-          <h1 class="hero__h1">Mangas</h1>
-          <h1 class="hero__h1">Pasteleras</h1>
-          <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
-          <p class="hero__p">
-            Somos fabricantes, distribuidores y comercializadores de mangas para
-            repostería.
-          </p>
-          <div class="hero__boton">
-            <a href="#productos" class="boton color-prim">Saber más</a>
-          </div>
-        </div>
-      </div>
-    </header> -->
-
+    <!-- SECCIONES DE LA PÁGINA  ******************************************************** -->
     <main>
       <section id="inicio" class="seccion">
         <div class="hero">
@@ -141,31 +129,31 @@
     </main>
     <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
     <footer class="pie">
-      <h2>Creación Mildre 73</h2>
-      <p>
-        Somos fabricantes, distribuidores y comercializadores de mangas para
-        repostería, con diferentes diseños, colores y materiales de calidad.
-      </p>
-      <a href=""><i class="fab fa-facebook"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-whatsapp"></i></a>
-      <p>
-        Av. San Martín, Caracas, Municipio Libertador e-mail:
-        mangaspasteleras2m@gmail.com
-      </p>
-      <h3>Productos</h3>
-      <h5><a href="">Detalles</a></h5>
-      <h5><a href="">Galería</a></h5>
-      <h3>Vínculos</h3>
-      <h5><a href="">Envíos y delivery</a></h5>
-      <h5><a href="">Misión y Visión</a></h5>
-      <h3>Enlaces</h3>
-      <h5><a href="">ZOOM</a></h5>
-      <h5><a href="">MRW</a></h5>
-      <h5><a href="">Tealca</a></h5>
-      <div class="pie__strip">
-        <h6>© 2021 Creación Mildre 73. Todos los derechos reservados.</h6>
-        <h6>Diseño web: paraque.ejob@gmail.com</h6>
+      <div class="container">
+        <h2>Creación Mildre 73</h2>
+        <p>
+          Somos fabricantes, distribuidores y comercializadores de mangas para
+          repostería, con diferentes diseños, colores y materiales de calidad.
+        </p>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-whatsapp"></i></a>
+        <p>Av. San Martín, Caracas, Municipio Libertador</p>
+        <p>e-mail: mangaspasteleras2m@gmail.com</p>
+        <h3>Productos</h3>
+        <h5><a href="">Detalles</a></h5>
+        <h5><a href="">Galería</a></h5>
+        <h3>Vínculos</h3>
+        <h5><a href="">Envíos y delivery</a></h5>
+        <h5><a href="">Misión y Visión</a></h5>
+        <h3>Enlaces</h3>
+        <h5><a href="">ZOOM</a></h5>
+        <h5><a href="">MRW</a></h5>
+        <h5><a href="">Tealca</a></h5>
+        <div class="pie__strip">
+          <h6>© 2021 Creación Mildre 73. Todos los derechos reservados.</h6>
+          <h6>Diseño web: paraque.ejob@gmail.com</h6>
+        </div>
       </div>
     </footer>
 
