--- a/index.html
+++ b/index.html
@@ -20,68 +20,72 @@
   </head>
   <body>
     <!-- ENCABEZADO DE MENÚ  ******************************************************** -->
-    <div class="header">
+    <header>
       <div class="container">
-        <div class="header__logo">Creación Mildre 73</div>
-        <div class="menu-btn">
-          <div class="menu-btn__burger"></div>
+        <input type="checkbox" name="" id="check" />
+
+        <div class="logo-container">
+          <h5 class="logo">Creación Mildre 73</h5>
+        </div>
+
+        <div class="nav-btn">
+          <div class="nav-links">
+            <ul>
+              <li class="nav-link active" data-url="inicio" style="--i: 0.6s">
+                <a href="#inicio">Inicio</a>
+              </li>
+              <li class="nav-link" data-url="productos" style="--i: 0.85s">
+                <a href="#productos"
+                  >Productos<i class="fas fa-caret-down"></i
+                ></a>
+                <div class="dropdown">
+                  <ul>
+                    <li class="dropdown-link">
+                      <a href="#detalles">Detalles</a>
+                    </li>
+                    <li class="dropdown-link">
+                      <a href="#galeria">Galería</a>
+                    </li>
+                    <div class="arrow"></div>
+                  </ul>
+                </div>
+              </li>
+              <li class="nav-link" data-url="servicios" style="--i: 1.1s">
+                <a href="#servicios">Servicios</a>
+              </li>
+              <li class="nav-link" data-url="nosotros" style="--i: 1.35s">
+                <a href="#nosotros"
+                  >Nosotros<i class="fas fa-caret-down"></i
+                ></a>
+                <div class="dropdown">
+                  <ul>
+                    <li class="dropdown-link">
+                      <a href="#mision">Misión y Visión</a>
+                    </li>
+                    <div class="arrow"></div>
+                  </ul>
+                </div>
+              </li>
+              <li class="nav-link" data-url="contacto" style="--i: 1.5s">
+                <a href="#contacto">Contáctanos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="hamburger-menu-container">
+          <div class="hamburger-menu">
+            <div></div>
+          </div>
         </div>
       </div>
-    </div>
-    <!-- MENÚ DE NAVEGACIÓN  ******************************************************** -->
-    <nav class="menu">
-      <div class="container">
-        <ul class="menu__ul">
-          <li class="menu__li">
-            <a class="menu__link active" data-url="inicio" href="#inicio"
-              >Inicio</a
-            >
-          </li>
-          <li class="menu__li">
-            <a class="menu__link" data-url="productos" href="#productos"
-              >Productos</a
-            >
-
-            <ul class="menu__ul2">
-              <li class="menu__li2">
-                <a class="menu__link" href="#detalles">Detalles</a>
-              </li>
-              <li class="menu__li2">
-                <a class="menu__link" href="#galeria">Galería</a>
-              </li>
-            </ul>
-          </li>
-          <li class="menu__li">
-            <a class="menu__link" data-url="servicios" href="#servicios"
-              >Servicios</a
-            >
-          </li>
-          <li class="menu__li">
-            <a class="menu__link" data-url="nosotros" href="#nosotros"
-              >Nosotros</a
-            >
-
-            <ul class="menu__ul2">
-              <li class="menu__li2">
-                <a class="menu__link" href="#mision">Misión y Visión</a>
-              </li>
-            </ul>
-          </li>
-
-          <li class="menu__li">
-            <a class="menu__link" data-url="contacto" href="#contacto"
-              >Contáctanos</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+    </header>
     <!-- SECCIONES DE LA PÁGINA  ******************************************************** -->
     <main>
       <section id="inicio" class="seccion">
         <div class="hero">
           <div class="hero__img">
-            <div class="container">
+            <div class="container2">
               <h1 class="hero__h1">Mangas</h1>
               <h1 class="hero__h1">Pasteleras</h1>
               <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
@@ -97,7 +101,7 @@
         </div>
       </section>
       <section id="productos" class="seccion">
-        <div class="container">
+        <div class="container2">
           <h2 class="secproduct__h3">Productos</h2>
           <p class="secproduct__parrafo">
             Mangas pasteleras de lona antiadherente, nylon impermeable y
@@ -129,7 +133,7 @@
     </main>
     <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
     <footer class="pie">
-      <div class="container">
+      <div class="container2">
         <h2>Creación Mildre 73</h2>
         <p>
           Somos fabricantes, distribuidores y comercializadores de mangas para
