Modificación de apertura y cierre del menú responsivo

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
               </li>
               <li class="nav-link" data-url="productos" style="--i: 0.85s">
                 <a href="#productos"
-                  >Productos<i class="fas fa-caret-down"></i
+                  >Productos&nbsp;<i class="fas fa-angle-down"></i
                 ></a>
                 <div class="dropdown">
                   <ul>
                     <li class="dropdown-link">
-                      <a href="#detalles">Detalles</a>
+                      <a href="#detalles">&nbsp;&nbsp;Detalles</a>
                     </li>
                     <li class="dropdown-link">
-                      <a href="#galeria">Galería</a>
+                      <a href="#galeria">&nbsp;&nbsp;Galería</a>
                     </li>
                     <div class="arrow"></div>
                   </ul>
@@ -55,12 +55,12 @@
               </li>
               <li class="nav-link" data-url="nosotros" style="--i: 1.35s">
                 <a href="#nosotros"
-                  >Nosotros<i class="fas fa-caret-down"></i
+                  >Nosotros&nbsp;<i class="fas fa-angle-down"></i
                 ></a>
                 <div class="dropdown">
                   <ul>
                     <li class="dropdown-link">
-                      <a href="#mision">Misión y Visión</a>
+                      <a href="#mision">&nbsp;&nbsp;Misión y Visión</a>
                     </li>
                     <div class="arrow"></div>
                   </ul>
@@ -79,6 +79,7 @@
           </div>
         </div>
       </div>
+      <div class="nav__overlay"></div>
     </header>
     <!-- SECCIONES DE LA PÁGINA  ******************************************************** -->
     <main>
