--- a/index.html
+++ b/index.html
@@ -1,173 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/estilos.css" />
-    <title>Mangas2m</title>
-  </head>
-  <body>
-    <!-- ENCABEZADO DE MENÚ  ******************************************************** -->
-    <header>
-      <div class="container">
-        <input type="checkbox" name="" id="check" />
 
-        <div class="logo-container">
-          <h5 class="logo">Creación Mildre 73</h5>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/estilos.css" />
+  <title>Mangas2m</title>
+</head>
 
-        <div class="nav-btn">
-          <div class="nav-links">
-            <ul>
-              <li class="nav-link active" data-url="inicio" style="--i: 0.6s">
-                <a href="#inicio">Inicio</a>
-              </li>
-              <li class="nav-link" data-url="productos" style="--i: 0.85s">
-                <a href="#productos"
-                  >Productos&nbsp;<i class="fas fa-angle-down"></i
-                ></a>
-                <div class="dropdown">
-                  <ul>
-                    <li class="dropdown-link">
-                      <a href="#detalles">&nbsp;&nbsp;Detalles</a>
-                    </li>
-                    <li class="dropdown-link">
-                      <a href="#galeria">&nbsp;&nbsp;Galería</a>
-                    </li>
-                    <div class="arrow"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link" data-url="servicios" style="--i: 1.1s">
-                <a href="#servicios">Servicios</a>
-              </li>
-              <li class="nav-link" data-url="nosotros" style="--i: 1.35s">
-                <a href="#nosotros"
-                  >Nosotros&nbsp;<i class="fas fa-angle-down"></i
-                ></a>
-                <div class="dropdown">
-                  <ul>
-                    <li class="dropdown-link">
-                      <a href="#mision">&nbsp;&nbsp;Misión y Visión</a>
-                    </li>
-                    <div class="arrow"></div>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-link" data-url="contacto" style="--i: 1.5s">
-                <a href="#contacto">Contáctanos</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+<body>
+  <!-- ENCABEZADO DE MENÚ  ******************************************************** -->
+  <header id="header">
 
-        <div class="hamburger-menu-container">
-          <div class="hamburger-menu">
-            <div></div>
-          </div>
-        </div>
+    <div class="container">
+      <div class="menuBtn">
+        <div class="menuBtn__bar1"></div>
+        <div class="menuBtn__bar2"></div>
+        <div class="menuBtn__bar3"></div>
       </div>
-      <div class="nav__overlay"></div>
-    </header>
-    <!-- SECCIONES DE LA PÁGINA  ******************************************************** -->
-    <main>
-      <section id="inicio" class="seccion">
-        <div class="hero">
-          <div class="hero__img">
-            <div class="container2">
-              <h1 class="hero__h1">Mangas</h1>
-              <h1 class="hero__h1">Pasteleras</h1>
-              <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
-              <p class="hero__p">
-                Somos fabricantes, distribuidores y comercializadores de mangas
-                para repostería.
-              </p>
-              <div class="hero__boton">
-                <a href="#productos" class="boton color-prim">Saber más</a>
-              </div>
+    </div>
+
+    <div class="container">
+      <div class="logo">
+        <h5 class="logo__h5">Creación Mildre 73</h5>
+      </div>
+    </div>
+
+    <nav>
+      <ul class="navMenu" id="menuNav">
+        <li class="navMenu__link inicio active" style="--i: 0.4s">
+          <a href="#inicio" onclick="cierraBtn()">
+            <span class="link">Inicio</span>
+          </a>
+        </li>
+        <li class="navMenu__link productos" style="--i: 0.5s">
+          <div class="dropdown">
+            <button class="dropdown-btn" id="dropBtn1">
+              <span class="link">Productos</span>&nbsp;<i class="fas fa-angle-down"></i>
+            </button>
+            <div class="dropdown-container" id="dropContent1">
+              <a href="#productos" onclick="cierraBtn()">Descripción</a>
+              <a href="#detalles" onclick="cierraBtn()">Detalles</a>
+              <a href="#galeria" onclick="cierraBtn()">Galería</a>
             </div>
           </div>
-        </div>
-      </section>
-      <section id="productos" class="seccion">
-        <div class="container2">
-          <h2 class="secproduct__h3">Productos</h2>
-          <p class="secproduct__parrafo">
-            Mangas pasteleras de lona antiadherente, nylon impermeable y
-            plástico reusable. Resistentes y de fácil limpieza, todas
-            reutilizables, en variedad de colores, texturas, estampados y
-            tamaños.
-          </p>
-          <div class="secprod__card1"></div>
-        </div>
-      </section>
-      <section id="detalles" class="seccion">
-        <h2>Detalles</h2>
-      </section>
-      <section id="galeria" class="seccion">
-        <h2>Galería</h2>
-      </section>
-      <section id="servicios" class="seccion">
-        <h2>Servicios</h2>
-      </section>
-      <section id="nosotros" class="seccion">
-        <h2>Nosotros</h2>
-      </section>
-      <section id="mision" class="seccion">
-        <h2>Misión y Visión</h2>
-      </section>
-      <section id="contacto" class="seccion">
-        <h2>Contáctanos</h2>
-      </section>
-    </main>
-    <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
-    <footer class="pie">
-      <div class="container2">
-        <h2>Creación Mildre 73</h2>
-        <p>
-          Somos fabricantes, distribuidores y comercializadores de mangas para
-          repostería, con diferentes diseños, colores y materiales de calidad.
-        </p>
-        <a href=""><i class="fab fa-facebook"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-whatsapp"></i></a>
-        <p>Av. San Martín, Caracas, Municipio Libertador</p>
-        <p>e-mail: mangaspasteleras2m@gmail.com</p>
-        <h3>Productos</h3>
-        <h5><a href="">Detalles</a></h5>
-        <h5><a href="">Galería</a></h5>
-        <h3>Vínculos</h3>
-        <h5><a href="">Envíos y delivery</a></h5>
-        <h5><a href="">Misión y Visión</a></h5>
-        <h3>Enlaces</h3>
-        <h5><a href="">ZOOM</a></h5>
-        <h5><a href="">MRW</a></h5>
-        <h5><a href="">Tealca</a></h5>
-        <div class="pie__strip">
-          <h6>© 2021 Creación Mildre 73. Todos los derechos reservados.</h6>
-          <h6>Diseño web: paraque.ejob@gmail.com</h6>
+        </li>
+        <li class="navMenu__link servicios" style="--i: 0.6s">
+          <a href="#servicios" onclick="cierraBtn()">
+            <span class="link">Servicios</span>
+          </a>
+        </li>
+        <li class="navMenu__link nosotros" style="--i: 0.7s">
+          <div class="dropdown">
+            <button class="dropdown-btn" id="dropBtn2">
+              <span class="link">Acerca de</span>&nbsp;<i class="fas fa-angle-down"></i>
+            </button>
+            <div class="dropdown-container" id="dropContent2">
+              <a href="#nosotros" onclick="cierraBtn()">Nosotros</a>
+              <a href="#mision" onclick="cierraBtn()">Misión y Visión</a>
+            </div>
+          </div>
+        </li>
+        <li class="navMenu__link contacto" style="--i: 0.8s">
+          <a href="#contacto" onclick="cierraBtn()"><span class="link">Contáctanos</span></a>
+        </li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <div class="overlay" id="overlay"></div>
+
+  <!-- SECCIONES DE LA PÁGINA  ******************************************************** -->
+  <main>
+    <section id="inicio">
+      <div class="hero">
+        <div class="hero__img">
+          <div class="container">
+            <h1 class="hero__h1">Mangas <br> Pasteleras</h1>
+            <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
+            <p class="hero__p">
+              Somos fabricantes, distribuidores y <br> comercializadores de mangas
+              para repostería.
+            </p>
+            <div class="hero__boton">
+              <a href="#productos" class="boton color-prim">Saber más</a>
+            </div>
+            <div class="hero__mangaAzul"></div>
+            <div class="hero__mangaMorada"></div>
+            <div class="hero__mangaFucsia"></div>
+          </div>
         </div>
       </div>
-    </footer>
+    </section>
+    <section id="productos">
+      <div class="container">
+        <h2 class="secproduct__h3">Descripción</h2>
+        <p class="secproduct__parrafo">
+          Mangas pasteleras de lona antiadherente, nylon impermeable y
+          plástico reusable. Resistentes y de fácil limpieza, todas
+          reutilizables, en variedad de colores, texturas, estampados y
+          tamaños.
+        </p>
+        <div class="secprod__card1"></div>
+      </div>
+    </section>
+    <section id="detalles">
+      <div class="container">
+        <h2>Detalles</h2>
+      </div>
+    </section>
+    <section id="galeria">
+      <div class="container">
+        <h2>Galería</h2>
+      </div>
+    </section>
+    <section id="servicios">
+      <div class="container">
+        <h2>Servicios</h2>
+      </div>
+    </section>
+    <section id="nosotros">
+      <div class="container">
+        <h2>Nosotros</h2>
+      </div>
+    </section>
+    <section id="mision">
+      <div class="container">
+        <h2>Misión y Visión</h2>
+      </div>
+    </section>
+    <section id="contacto">
+      <div class="container">
+        <h2>Contáctanos</h2>
+      </div>
+    </section>
+  </main>
+  <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
+  <footer class="pie">
+    <div class="container">
+      <h2>Creación Mildre 73</h2>
+      <p>
+        Somos fabricantes, distribuidores y comercializadores de mangas para
+        repostería, con diferentes diseños, colores y materiales de calidad.
+      </p>
+      <a href=""><i class="fab fa-facebook"></i></a>
+      <a href=""><i class="fab fa-instagram"></i></a>
+      <a href=""><i class="fab fa-whatsapp"></i></a>
+      <p>Av. San Martín, Caracas, Municipio Libertador</p>
+      <p>e-mail: mangaspasteleras2m@gmail.com</p>
+      <h3>Productos</h3>
+      <h5><a href="">Detalles</a></h5>
+      <h5><a href="">Galería</a></h5>
+      <h3>Vínculos</h3>
+      <h5><a href="">Envíos y delivery</a></h5>
+      <h5><a href="">Misión y Visión</a></h5>
+      <h3>Enlaces</h3>
+      <h5><a href="">ZOOM</a></h5>
+      <h5><a href="">MRW</a></h5>
+      <h5><a href="">Tealca</a></h5>
+      <div class="pie__strip">
+        <h6>© 2021 Creación Mildre 73. Todos los derechos reservados.</h6>
+        <h6>Diseño web: paraque.ejob@gmail.com</h6>
+      </div>
+    </div>
+  </footer>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
-      integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+    integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+</body>
+
 </html>
