Agregado diseño de las secciones PRODUCTOS, DETALLES y GALERÍA

--- a/index.html
+++ b/index.html
@@ -83,43 +83,128 @@
       <div class="hero">
         <div class="hero__img">
           <div class="container">
-            <h1 class="hero__h1">Mangas <br> Pasteleras</h1>
-            <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
-            <p class="hero__p">
-              Somos fabricantes, distribuidores y <br> comercializadores de mangas
-              para repostería.
-            </p>
-            <div class="hero__boton">
-              <a href="#productos" class="boton color-prim">Saber más</a>
+            <div class="hero__grid">
+              <h1 class="hero__h1">Mangas <br> Pasteleras</h1>
+              <h3 class="hero__h3">Con el mejor diseño y durabilidad</h3>
+              <p class="hero__p">
+                Somos fabricantes, distribuidores y <br> comercializadores de mangas
+                para repostería.
+              </p>
+              <div class="hero__boton">
+                <a href="#productos" class="boton color-prim">Saber más</a>
+              </div>
+              <div class="hero__mangas"></div>
             </div>
-            <div class="hero__mangaAzul"></div>
-            <div class="hero__mangaMorada"></div>
-            <div class="hero__mangaFucsia"></div>
           </div>
         </div>
       </div>
     </section>
     <section id="productos">
       <div class="container">
-        <h2 class="secproduct__h3">Descripción</h2>
-        <p class="secproduct__parrafo">
+        <h2 class="prod__h2">Descripción</h2>
+        <p class="prod__p">
           Mangas pasteleras de lona antiadherente, nylon impermeable y
-          plástico reusable. Resistentes y de fácil limpieza, todas
+          plástico reusable. <br> <br> Resistentes y de fácil limpieza, todas
           reutilizables, en variedad de colores, texturas, estampados y
           tamaños.
         </p>
-        <div class="secprod__card1"></div>
+        <div class="prod__grid">
+          <div class="prod__card1">
+            <div class="card1__img1"></div>
+            <div class="card1__line1"></div>
+            <p class="card1__p1">Mangas con motivos animados</p>
+            <p class="card1__p11">Material: Nylon impermeable</p>
+          </div>
+          <div class="prod__card2">
+            <div class="card1__img2"></div>
+            <div class="card1__line2"></div>
+            <p class="card1__p2">Mangas unicolor y estampadas</p>
+            <p class="card1__p22">Material: Lona antiadherente</p>
+          </div>
+          <div class="prod__card3">
+            <div class="card1__img3"></div>
+            <div class="card1__line3"></div>
+            <p class="card1__p3">Mangas estampadas</p>
+            <p class="card1__p33">Material: Plástico reusable</p>
+          </div>
+        </div>
       </div>
+      <div class="prod__espa"></div>
+      <div class="prod__fig"></div>
     </section>
     <section id="detalles">
       <div class="container">
-        <h2>Detalles</h2>
+        <h2 class="detail__h2">Detalles</h2>
+        <div class="detail__grid">
+          <div class="detail__asa">
+            <div class="detail__a"></div>
+            <p class="detail__p1"> <span><i class="fas fa-check-circle"></i></span>&nbsp;&nbsp;Con asa para colgar.</p>
+          </div>
+          <div class="detail__med">
+            <div class="detail__m"></div>
+            <p class="detail__p2"> <span><i class="fas fa-check-circle"></i></span>&nbsp;&nbsp;Diferentes medidas, según
+              las necesidades
+              del
+              cliente: <br>
+              10" ...... 25 cm. <br>
+              12" ...... 30 cm. <br>
+              15" ...... 38 cm. <br>
+              26" ...... 60 cm.</p>
+          </div>
+          <div class="detail__bor">
+            <div class="detail__b"></div>
+            <p class="detail__p3"> <span><i class="fas fa-check-circle"></i></span>&nbsp;&nbsp;Reforzadas en el borde
+              con
+              triple costura
+              y también
+              en la parte interior.</p>
+          </div>
+          <div class="detail__boc">
+            <div class="detail__bo"></div>
+            <p class="detail__p4"> <span><i class="fas fa-check-circle"></i></span>&nbsp;&nbsp;Adaptables a cualquier
+              tamaño de acople o
+              boquilla.
+            </p>
+          </div>
+        </div>
       </div>
+      <div class="detail__fig"></div>
     </section>
     <section id="galeria">
       <div class="container">
-        <h2>Galería</h2>
+        <h2 class="galeria__h2">Galería</h2>
+        <p class="galeria__p">Seleccione cualquier imagen, para ver una muestra ampliada de nuestros productos. </p>
+        <div class="galeria__grid">
+          <div class="galeria__imgc1">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc2">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc3">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc4">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc5">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc6">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc7">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc8">
+            <div class="galeria__img"></div>
+          </div>
+          <div class="galeria__imgc9">
+            <div class="galeria__img"></div>
+          </div>
+        </div>
       </div>
+      <div class="galeria__fig"></div>
     </section>
     <section id="servicios">
       <div class="container">
@@ -145,30 +230,40 @@
   <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
   <footer class="pie">
     <div class="container">
-      <h2>Creación Mildre 73</h2>
-      <p>
-        Somos fabricantes, distribuidores y comercializadores de mangas para
-        repostería, con diferentes diseños, colores y materiales de calidad.
-      </p>
-      <a href=""><i class="fab fa-facebook"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-whatsapp"></i></a>
-      <p>Av. San Martín, Caracas, Municipio Libertador</p>
-      <p>e-mail: mangaspasteleras2m@gmail.com</p>
-      <h3>Productos</h3>
-      <h5><a href="">Detalles</a></h5>
-      <h5><a href="">Galería</a></h5>
-      <h3>Vínculos</h3>
-      <h5><a href="">Envíos y delivery</a></h5>
-      <h5><a href="">Misión y Visión</a></h5>
-      <h3>Enlaces</h3>
-      <h5><a href="">ZOOM</a></h5>
-      <h5><a href="">MRW</a></h5>
-      <h5><a href="">Tealca</a></h5>
-      <div class="pie__strip">
-        <h6>© 2021 Creación Mildre 73. Todos los derechos reservados.</h6>
-        <h6>Diseño web: paraque.ejob@gmail.com</h6>
+      <div class="pie__grid">
+        <h2 class="pie__h2">Creación Mildre 73</h2>
+        <p class="pie__p1">
+          Somos fabricantes, distribuidores y comercializadores <br> de mangas para
+          repostería.
+        </p>
+        <div class="pie__iconos">
+          <a class="pie__icon1" href=""><i class="fab fa-facebook"></i></a>
+          <a class="pie__icon2" href=""><i class="fab fa-instagram"></i></a>
+          <a class="pie__icon3" href=""><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <p class="pie__p2">Av. San Martín, Caracas, Venezuela <br>
+          e-mail: mangaspasteleras2m@gmail.com</p>
+        <div class="pie__prod">
+          <p class="pie__p3">Productos</p>
+          <a href="#detalles">Detalles</a>
+          <a href="#galeria">Galería</a>
+        </div>
+        <div class="pie__vinc">
+          <p class="pie__p3">Vínculos</p>
+          <a href="#nosotross">Nosotros</a>
+          <a href="#mision">Misión y Visión</a>
+        </div>
+        <div class="pie__enla">
+          <p class="pie__p3">Enlaces</p>
+          <a href="">ZOOM</a>
+          <a href="">MRW</a>
+          <a href="">Tealca</a>
+        </div>
       </div>
+    </div>
+    <div class="pie__strip">
+      <p class="pie__p4">© 2021 Creación Mildre 73. Todos los derechos reservados. </p>
+      <p class="pie__p4"><a href="https://t.me/Peguardi">Diseño web: https://t.me/Peguardi</a></p>
     </div>
   </footer>
 
