Finalización del contenido de la página web

--- a/index.html
+++ b/index.html
@@ -175,56 +175,219 @@
         <h2 class="galeria__h2">Galería</h2>
         <p class="galeria__p">Seleccione cualquier imagen, para ver una muestra ampliada de nuestros productos. </p>
         <div class="galeria__grid">
-          <div class="galeria__imgc1">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MLOUN_04.png" alt="Manga de Lona Unicolor">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc2">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MLOUN_07.png" alt="Manga de Lona Unicolor">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc3">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MLOUN_10.png" alt="Manga de Lona Unicolor">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc4">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MLOUN_16.png" alt="Manga de Lona Unicolor">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc5">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MNYLO_02.png" alt="Manga de Nylon Animada">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc6">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MNYLO_05.png" alt="Manga de Nylon Animada">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc7">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MNYLO_06.png" alt="Manga de Nylon Animada">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc8">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MNYLO_18.png" alt="Manga de Nylon Animada">
+            <!-- </div> -->
           </div>
-          <div class="galeria__imgc9">
-            <div class="galeria__img"></div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MPLAS_09.png" alt="Manga de Plástico Estampada">
+            <!-- </div> -->
+          </div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MLOES_02.png" alt="Manga de Lona Estampada">
+            <!-- </div> -->
+          </div>
+          <div class="galeria__imgc">
+            <!-- <div class="galeria__img"> -->
+            <img class="myImg" src="img/MINDU_01.png" alt="Manga de Nylon Industrial">
+            <!-- </div> -->
           </div>
         </div>
       </div>
       <div class="galeria__fig"></div>
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+
+        <!-- The Close Button -->
+        <span class="close">&times;</span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="img01">
+
+        <!-- Modal Caption (Image Text) -->
+        <div id="caption"></div>
+      </div>
     </section>
     <section id="servicios">
       <div class="container">
-        <h2>Servicios</h2>
+        <h2 class="service__h2">Servicios</h2>
+        <div class="service__grid">
+          <div class="service__logo">
+            <img src="img/logo.jpg" alt="logo">
+          </div>
+          <div class="service__p">
+            <p class="serv__p">
+              Para nosotros concretar una venta es importante, pero lograr La Fidelidad de los
+              Clientes es vital..!!
+            </p>
+          </div>
+          <div class="service__moto">
+            <img src="img/Grupo 12.svg" alt="">
+          </div>
+          <div class="service__zoom">
+            <img src="img/zoom.png" alt="logo zoom">
+          </div>
+          <div class="service__mrw">
+            <img src="img/mrw.png" alt="logo mrw">
+          </div>
+          <div class="service__tealca">
+            <img src="img/tealca.png" alt="logo tealca">
+          </div>
+        </div>
+        <div class="service__grid2">
+          <div class="serv__cont1">
+            <h3 class="cont__h3">Delivery en la Gran Caracas</h3>
+            <p class="cont__p">Delivery en las principales zonas de Caracas y La Guaira.</p>
+          </div>
+          <div class="serv__cont2">
+            <h3 class="cont__h3">Envíos a nivel Nacional</h3>
+            <p class="cont__p">Envíos por Zoom, Tealca y MRW a Nivel Nacional.</p>
+          </div>
+          <div class="serv__cont3">
+            <h3 class="cont__h3">Entregas en tiempo récord</h3>
+            <p class="cont__p">Personalizamos las entregas de acuerdo a las necesidades del cliente.</p>
+          </div>
+        </div>
       </div>
+      <div class="service__content"></div>
     </section>
     <section id="nosotros">
       <div class="container">
-        <h2>Nosotros</h2>
+        <h2 class="nost__h2">Nosotros</h2>
+        <div class="nost__contp">
+          <p class="nost__p">En el año 2.019, Mildre y Marycelis, comenzaron un Emprendimiento relacionado con postres,
+            tortas y pasapalos, entre otros, nombrándolo (dulces y salados MM).
+            Las Mangas Pasteleras y Reposteras utilizadas para dicha labor, carecían de la resistencia o durabilidad
+            necesaria para tales actividades; por lo que Mildre decidió, diseñar y confeccionar nuestras propias Mangas
+            Pasteleras y Reposteras, obteniendo así, la resistencia y durabilidad que se esperaba. </p>
+        </div>
+        <div class="nost__contcirc">
+          <img src="img/Elipse 60.svg" alt="">
+          <div class="nost__contimg">
+            <img src="img/Captura de pantalla 2021-07-26.png" alt="foto Mary y Mildre">
+          </div>
+        </div>
+        <div class="nost__contp2">
+          <p class="nost__p2">Es entonces cuando se toma la decisión de comercializarlas, innovando en su diseño,
+            tamaños y texturas, así como el procurar que en cada producción, nos esforcemos en superar su resistencia,
+            durabilidad y calidad; naciendo <span>Creación Mildre 73</span>.</p>
+        </div>
+        <div class="nost__contblob">
+          <img src="img/blob.svg" alt="">
+          <div class="nost__contfig">
+            <img src="img/SVG dos chicas una torta.svg" alt="chicas con pastel">
+          </div>
+        </div>
       </div>
     </section>
     <section id="mision">
       <div class="container">
-        <h2>Misión y Visión</h2>
+        <h2 class="misi__h2">Misión y Visión</h2>
+        <div class="misi__contp">
+          <p class="misi__p">Nuestra <span>Misión</span>, es brindarle a nuestra distinguida clientela unas Mangas
+            Pasteleras y Reposteras de excelente calidad adaptadas a sus requerimientos y 100% de fabricación Nacional.
+          </p>
+        </div>
+        <div class="misi__contit">
+          <p class="misi__tit">MISIÓN</p>
+        </div>
+        <div class="misi__contp2">
+          <p class="misi__p2">Tenemos la <span>Visión</span> de ser un fabricante, distribuidor y comercializador a
+            nivel Nacional e Internacional de Mangas Pasteleras y Reposteras que facilite la elaboración de sus
+            productos a amas de casa, pasteleros, reposteros y profesionales de la gastronomía en general.</p>
+        </div>
+        <div class="misi__contit2">
+          <p class="misi__tit2">VISIÓN</p>
+        </div>
+        <div class="misi__contrect">
+          <img src="img/Rectángulo 43.svg" alt="">
+          <div class="misi__contfig">
+            <img src="img/Grupo 14.svg" alt="">
+          </div>
+        </div>
       </div>
     </section>
     <section id="contacto">
       <div class="container">
-        <h2>Contáctanos</h2>
+        <h2 class="cont__h2">Contáctanos</h2>
+        <div class="cont__grid">
+          <div class="cont__contp">
+            <p class="cont__p">No pierdas la oportunidad de adquirir un producto de calidad.
+              "LA FIEL AMIGA A TUS DESEOS DULCES Y SALADOS"
+            </p>
+          </div>
+          <!-- <div class="cont__fig"> -->
+          <img class="cont__fig" src="img/chica redes sociales.svg" alt="chica redes sociales">
+          <!-- </div> -->
+          <div class="cont__contp2">
+            <p class="cont__p2">Puedes seguirnos a través de las <span class="azul">Redes Sociales</span>, donde
+              constantemente
+              estamos publicando tips, recetas, promociones y concursos para nuestros clientes y seguidores.
+              Presiona en los iconos a continuación, para seguirnos:
+            </p>
+          </div>
+          <div class="cont__face">
+            <a href="#"><img src="img/facebook.svg" alt="facebook" style="margin-left: 15px;"></a>
+            <h4>Facebook</h4>
+          </div>
+          <div class="cont__inst">
+            <a href="#"><img src="img/instagram.svg" alt="instagram" style="margin-left: 17px;"></a>
+            <h4>Instagram</h4>
+          </div>
+          <div class="cont__contp3">
+            <p class="cont__p3">Igualmente nos puedes contactar, por medio de <span class="verde">WhatsApp</span>, para
+              solicitar precios, existencias y modelos de mangas pasteleras, así como también el catálogo digital en
+              formato PDF, con todos nuestros productos. Presiona en el icono siguiente para contactarnos:
+            </p>
+          </div>
+          <div class="cont__what">
+            <a href="#"><img src="img/whatsapp.svg" alt="whatsapp" style="margin-left: 17px;"></a>
+            <h4>Whatsapp</h4>
+          </div>
+          <!-- <div class="cont__phone"> -->
+          <img class="cont__phone" src="img/smart phone.svg" alt="smart phone">
+          <!-- </div> -->
+        </div>
       </div>
+      <div class="cont__fig2"></div>
     </section>
   </main>
   <!-- PIE DE PÁGINA / FOOTER  ******************************************************** -->
