Agregados las direcciones a los enlaces al diseño final de la página web

--- a/index.html
+++ b/index.html
@@ -365,11 +365,13 @@
             </p>
           </div>
           <div class="cont__face">
-            <a href="#"><img src="img/facebook.svg" alt="facebook" style="margin-left: 15px;"></a>
+            <a href="https://www.facebook.com/mildre.izaguirre.1"><img src="img/facebook.svg" alt="facebook"
+                style="margin-left: 15px;"></a>
             <h4>Facebook</h4>
           </div>
           <div class="cont__inst">
-            <a href="#"><img src="img/instagram.svg" alt="instagram" style="margin-left: 17px;"></a>
+            <a href="https://www.instagram.com/mangas2m/"><img src="img/instagram.svg" alt="instagram"
+                style="margin-left: 17px;"></a>
             <h4>Instagram</h4>
           </div>
           <div class="cont__contp3">
@@ -379,7 +381,8 @@
             </p>
           </div>
           <div class="cont__what">
-            <a href="#"><img src="img/whatsapp.svg" alt="whatsapp" style="margin-left: 17px;"></a>
+            <a href="https://wa.me/584143162606"><img src="img/whatsapp.svg" alt="whatsapp"
+                style="margin-left: 17px;"></a>
             <h4>Whatsapp</h4>
           </div>
           <!-- <div class="cont__phone"> -->
@@ -400,9 +403,9 @@
           repostería.
         </p>
         <div class="pie__iconos">
-          <a class="pie__icon1" href=""><i class="fab fa-facebook"></i></a>
-          <a class="pie__icon2" href=""><i class="fab fa-instagram"></i></a>
-          <a class="pie__icon3" href=""><i class="fab fa-whatsapp"></i></a>
+          <a class="pie__icon1" href="https://www.facebook.com/mildre.izaguirre.1"><i class="fab fa-facebook"></i></a>
+          <a class="pie__icon2" href="https://www.instagram.com/mangas2m/"><i class="fab fa-instagram"></i></a>
+          <a class="pie__icon3" href="https://wa.me/584143162606"><i class="fab fa-whatsapp"></i></a>
         </div>
         <p class="pie__p2">Av. San Martín, Caracas, Venezuela <br>
           e-mail: mangaspasteleras2m@gmail.com</p>
@@ -413,14 +416,14 @@
         </div>
         <div class="pie__vinc">
           <p class="pie__p3">Vínculos</p>
-          <a href="#nosotross">Nosotros</a>
+          <a href="#nosotros">Nosotros</a>
           <a href="#mision">Misión y Visión</a>
         </div>
         <div class="pie__enla">
           <p class="pie__p3">Enlaces</p>
-          <a href="">ZOOM</a>
-          <a href="">MRW</a>
-          <a href="">Tealca</a>
+          <a href="https://www.zoom.red">ZOOM</a>
+          <a href="http://www.mrwve.com">MRW</a>
+          <a href="https://tealca.com">Tealca</a>
         </div>
       </div>
     </div>
